support javascript scope

--- a/test/lang/__snapshots__/parser.test.ts.yml
+++ b/test/lang/__snapshots__/parser.test.ts.yml
@@ -216,7 +216,9 @@ Tools / simple syntax / ast / 0: |-
             }
           }
         },
-        {}
+        {
+          "code": "123"
+        }
       ],
       "style_list": [
         {
