support import statement

--- a/test/lang/__snapshots__/parser.test.ts.yml
+++ b/test/lang/__snapshots__/parser.test.ts.yml
@@ -3,6 +3,12 @@ Tools / simple syntax / ast / 0: |-
     "block": {
       "statement_list": [
         {
+          "urls": [
+            "typo.css",
+            "style.css"
+          ]
+        },
+        {
           "left": {
             "token": {
               "type": "ID",
