--- a/test/lang/__snapshots__/transformer.test.ts.yml
+++ b/test/lang/__snapshots__/transformer.test.ts.yml
@@ -1,4 +1,6 @@
 Tools / simple syntax / js / 0: |-
+  windi.import("typo.css");
+  windi.import("style.css");
   let number = 2;
   let a = number;
   let b = add(mul(10, a), div(mul(10, number), 4));
@@ -9,7 +11,7 @@ Tools / simple syntax / js / 0: |-
   console.log(d);
   console.log(b);
   console.warn(add(a, 12));
-  eval(`
+
           import { eval, rgba, get, set } from 'windi/lang';
 
           const a = get('width');
@@ -18,7 +20,7 @@ Tools / simple syntax / js / 0: |-
           export function add(a, b) {
             return a + b;
           }
-        `);
+        ;
   (() => {
   const style = new Style(".test");
   let testNest = 123;
