--- a/test/lang/__snapshots__/transformer.test.ts.yml
+++ b/test/lang/__snapshots__/transformer.test.ts.yml
@@ -1,6 +1,6 @@
 Tools / simple syntax / js / 0: |-
-  windi.import("typo.css");
-  windi.import("style.css");
+  __import__("typo.css");
+  __import__("style.css");
   import "module1";
   import "module2";
   import "module3";
@@ -15,32 +15,34 @@ Tools / simple syntax / js / 0: |-
   function func(a, b) {
   let f = 3;
   function nest(c, d) {
-  return mul(c, d);
+  return __mul__(c, d);
   };
-  return minus(add(a, div(b, f)), nest(a, b));
+  return __minus__(__add__(a, __div__(b, f)), nest(a, b));
   };
   let number = 2;
   let a = number;
-  let b = add(mul(10, a), div(mul(10, number), 4));
-  let c = minus(a, negative(b));
+  let b = __add__(__mul__(10, a), __div__(__mul__(10, number), 4));
+  let c = __minus__(a, __negative__(b));
   let d = "green";
-  let e = [10, "green", minus(a, b)];
-  let f = [10, "green", minus(a, b)];
+  let e = [10, "green", __minus__(a, b)];
+  let f = [10, "green", __minus__(a, b)];
   let g = {  
     1: 2,
     "a": 1,
     "b": 2,
-    "c": minus(a, b)
+    "c": __minus__(a, b)
   };
-  let h = func2(add(func(1, 2), div(4, 3)));
+  console.assert(!(1 === 2) && 5 > 3);
+  console.assert(__in__(4, [1, 2, 4]));
+  let h = func2(__add__(func(1, 2), __div__(4, 3)));
   let h = true;
-  let i = mul(false, 3);
+  let i = __mul__(false, 3);
   let j = undefined;
-  c = add(c, 2);
-  add(a, 4);
+  c = __add__(c, __mul__(4, __exp__(2, 3)));
+  __add__(a, 4);
   console.log(d);
   console.log(b);
-  console.warn(add(a, 12));
+  console.warn(__add__(a, 12));
 
           import { eval, rgba, get, set } from 'windi/lang';
 
